--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,6 @@
   <body>
     <h1>tabs project</h1>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src="..\backend\app.js"></script>
   </body>
 </html>
