--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,23 @@
                     <button class="tab-btn" data-id="goals">goals</button>
                 </div>
             </article>
+            <article class="about-content">
+                <!-- single item -->
+                <div class="content active" id="history">
+                    <h4>history</h4>
+                </div>
+                <!-- end of single item -->
+                <!-- single item -->
+                <div class="content active" id="vision">
+                    <h4>vision</h4>
+                </div>
+                <!-- end of single item -->
+                <!-- single item -->
+                <div class="content active" id="goals">
+                    <h4>goals</h4>
+                </div>
+                <!-- end of single item -->
+            </article>
         </div>
     </section>
     <!-- javascript -->
